# digidoc-server

./: Cargo.toml  README.md  build.rs  run.sh
include/: digidoc.hpp
src/: configuration.rs  digidoc.cpp  digidoc.rs  lib.rs  main.rs  startup.rs
